<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/CAMPUSCONTAGION"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/allerta_stencil"
        android:text="CAMPUS CONTAGION"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txtLoginBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtPasswordBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CAMPUSCONTAGION" />

    <EditText
        android:id="@+id/txtPasswordBox"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginBottom="228dp"
        android:ems="10"
        android:hint="Enter password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnManageAccount"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:background="#201F1F"
        android:fontFamily="@font/allerta_stencil"
        android:text="MANAGE ACCOUNT"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLobby"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:background="#201F1F"
        android:fontFamily="@font/allerta_stencil"
        android:text="Register"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/btnManageAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLobby"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:background="#FFC107"
        android:drawableTop="#FFC107"
        android:fontFamily="@font/allerta_stencil"
        android:text="LOGIN"
        android:textAlignment="center"
        android:textColor="#201F1F"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtBob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPasswordBox"
        app:layout_constraintVertical_bias="0.948" />





</androidx.constraintlayout.widget.ConstraintLayout>