<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserLandingPageActivity">


    <Button
        android:id="@+id/btnJoinGame"
        android:layout_width="417dp"
        android:layout_height="80dp"
        android:background="#201F1F"
        android:fontFamily="@font/allerta_stencil"
        android:text="Join a Game..."
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHostGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnHostGame"
        android:layout_width="441dp"
        android:layout_height="90dp"
        android:layout_marginBottom="292dp"
        android:background="#FFC107"
        android:drawableTop="#FFC107"
        android:fontFamily="@font/allerta_stencil"
        android:text="Host a game..."
        android:textAlignment="center"
        android:textColor="#201F1F"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>